--- a/test.html
+++ b/test.html
@@ -1,5 +1,18 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="website title" />
-<meta property="og:description" content="⣿" />
+<meta property="og:description" content="⣿⠀⠀⠙⢿⣿⣿⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⠀⢰⣄⠀⠻⣿⠀⢸⣿⣿⡿⠿⠿⠿⠿⠿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⠀⢸⣿⣦⡀⠈⠀⢸⣿⣿⣷⣤⣤⣤⣤⣤⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⠀⢸⣿⣿⣿⣆⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⣶⣾⣿⣿⣿⣿⣦⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+⣿⡟⠻⣿⣿⣿⣿⠟⢻⣿⣿⡿⠿⠿⣿⣿⣿⠟⠛⠿⠿⣿⣿⠁⢀⡈⠉⠙⢿⣿
+⣿⡇⠀⣿⣿⣿⣿⠀⢸⡟⠁⢀⣀⣀⠈⠹⡇⠀⣶⣤⡄⠈⣿⠀⢸⣿⣿⣦⠀⢻
+⣿⡇⠀⠟⢀⠈⢻⠀⢸⠀⠀⣿⣿⣿⠆⠀⡇⠀⠉⠉⢀⣰⣿⠀⢸⣿⣿⡿⠀⣸
+⣿⡇⠀⣠⣾⣷⡀⠀⢸⣦⡀⠈⠉⠉⢀⣰⡇⠀⣷⣤⡀⠙⣿⠀⢸⣿⠿⠁⢠⣿
+⣿⣷⠾⠛⠛⠻⠿⣷⣿⡿⠿⣿⣿⣿⡿⠿⢷⣴⣿⣿⡿⠶⠛⠤⣄⣀⣠⣴⣿⣿
+⣿⣿⠀⢰⣶⣦⠀⢸⡿⠁⠀⢹⣿⡏⢀⣤⣀⣿⣿⡟⠀⣠⣶⣤⣾⣿⣿⣿⣿⣿
+⣿⣿⠀⠘⠋⠁⣠⣾⠃⢠⡇⠀⢻⣧⣀⠉⠙⠛⢿⣧⣀⣀⠉⠙⢿⣿⣿⣿⣿⣿
+⣿⣿⠀⢰⣾⣿⣿⠇⢀⣠⣤⡄⠈⣿⣿⢿⣷⡆⠀⣿⣿⣿⡿⠆⢈⣿⣿⣿⣿⣿
+⣿⣿⣀⣼⣿⣿⣯⣀⣼⣿⣿⣿⣄⣸⣧⣄⣀⣀⣴⣿⡉⣀⣠⣤⣾⣿⣿⣿⣿⣿" />
 <meta property="og:url" content="website url" />
 <meta property="og:image" content="full thumbnail path" />
