--- a/test.html
+++ b/test.html
@@ -3,20 +3,6 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.twitchquotes.com/copypastas/3065" />
 <meta property="og:image" content="https://www.twitchquotes.com/assets/kappa_med_res-675134d074d8d9a30997a2923c78152e03827eb7452f141e39712eccec8ad2fa.jpg" />
-<meta property="og:description" content="⣿⠛⢻⣿⣿⣿⣿⠛⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⠀⠀⠙⢿⣿⣿⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⠀⢰⣄⠀⠻⣿⠀⢸⣿⣿⡿⠿⠿⠿⠿⠿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⠀⢸⣿⣦⡀⠈⠀⢸⣿⣿⣷⣤⣤⣤⣤⣤⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⠀⢸⣿⣿⣿⣆⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⣶⣾⣿⣿⣿⣿⣦⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-⣿⡟⠻⣿⣿⣿⣿⠟⢻⣿⣿⡿⠿⠿⣿⣿⣿⠟⠛⠿⠿⣿⣿⠁⢀⡈⠉⠙⢿⣿
-⣿⡇⠀⣿⣿⣿⣿⠀⢸⡟⠁⢀⣀⣀⠈⠹⡇⠀⣶⣤⡄⠈⣿⠀⢸⣿⣿⣦⠀⢻
-⣿⡇⠀⠟⢀⠈⢻⠀⢸⠀⠀⣿⣿⣿⠆⠀⡇⠀⠉⠉⢀⣰⣿⠀⢸⣿⣿⡿⠀⣸
-⣿⡇⠀⣠⣾⣷⡀⠀⢸⣦⡀⠈⠉⠉⢀⣰⡇⠀⣷⣤⡀⠙⣿⠀⢸⣿⠿⠁⢠⣿
-⣿⣷⠾⠛⠛⠻⠿⣷⣿⡿⠿⣿⣿⣿⡿⠿⢷⣴⣿⣿⡿⠶⠛⠤⣄⣀⣠⣴⣿⣿
-⣿⣿⠀⢰⣶⣦⠀⢸⡿⠁⠀⢹⣿⡏⢀⣤⣀⣿⣿⡟⠀⣠⣶⣤⣾⣿⣿⣿⣿⣿
-⣿⣿⠀⠘⠋⠁⣠⣾⠃⢠⡇⠀⢻⣧⣀⠉⠙⠛⢿⣧⣀⣀⠉⠙⢿⣿⣿⣿⣿⣿
-⣿⣿⠀⢰⣾⣿⣿⠇⢀⣠⣤⡄⠈⣿⣿⢿⣷⡆⠀⣿⣿⣿⡿⠆⢈⣿⣿⣿⣿⣿
-⣿⣿⣀⣼⣿⣿⣯⣀⣼⣿⣿⣿⣄⣸⣧⣄⣀⣀⣴⣿⡉⣀⣠⣤⣾⣿⣿⣿⣿⣿" />
+<meta property="og:description" content="" />
 <meta property="og:url" content="website url" />
 <meta property="og:image" content="full thumbnail path" />
