--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<script>console.log('hi')</script>
+<script>alert('hi')</script>
 <meta property="fb:app_id" content="1897814150488279"/>
 <meta property="og:title" content="Test" />
 <meta property="og:type" content="website" />
