--- a/test.html
+++ b/test.html
@@ -1,4 +1,3 @@
-<script>alert('hi')</script>
 <meta property="fb:app_id" content="1897814150488279"/>
 <meta property="og:title" content="Test" />
 <meta property="og:type" content="website" />
@@ -9,6 +8,6 @@
                                          ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
                                          ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
                                          ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-                                         ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿" />
+                                         ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿ <script>alert('hi')</script>" />
 <meta property="og:url" content="website url" />
 <meta property="og:image" content="full thumbnail path" />
