--- a/test.html
+++ b/test.html
@@ -1,6 +1,13 @@
-<script>console.log('hi')</script>
-<meta property="og:type" content="website">
-<meta property="og:title" content="website title" />
-<meta property="og:description" content="website description" />
+<meta property="fb:app_id" content="1897814150488279"/>
+<meta property="og:title" content="Test" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.twitchquotes.com/copypastas/3065" />
+<meta property="og:image" content="https://www.twitchquotes.com/assets/kappa_med_res-675134d074d8d9a30997a2923c78152e03827eb7452f141e39712eccec8ad2fa.jpg" />
+<meta property="og:description" content="<script>alert('hi')</script> ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+                                         ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+                                         ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+                                         ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+                                         ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+                                         ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿" />
 <meta property="og:url" content="website url" />
 <meta property="og:image" content="full thumbnail path" />
